applications/website/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress

spec:
  rules:
    - host: website.cluster.kuin.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-service
                port:
                  number: 80
